# repo

./: CMakeLists.txt  README.md  check.sh
.github/workflows/: lab-check.yml
scripts/: ai_check.py
tests/: test_vector.cpp
